--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="text">
-      <h1>Hey! AYA this is for you 💖....</h1>
+      <h1>Hey! Zhanna this is for you 💖....</h1>
     </div>
     <div id="envelope">
       <div id="back">
@@ -83,10 +83,7 @@
 
         <!-- <img src="https://i.postimg.cc/5yZQnDpb/ukraine-7424066-640.webp" />-->
         <p>
-          You are the FRIEND I have been dreaming all my life. I just want you to know! No matter how hard you try, how bad you feel, never accept defeat
-          you can come to me and share anything. I'll listen without any judgements. <br/>
-          The challenges you face in your study and the diverse people you meet will all contribute to your personal and professional development 
-          in ways you can't yet imagine. So embrace those experiences, for they will be the stories you'll tell for years to come.
+          Жанна, ты очень хороший человек. Я ценю тебя и нашу дружбу. Наша лучезарная, яркая соседка с очень добрым сердцем. Мы любим тебя ❤️
           <br />
           <br />
           I hope this made your day. <br />
