--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="text">
-      <h1>Hey! Zhanna this is for you 💖....</h1>
+      <h1>Hey! Samaya this is for you 💖....</h1>
     </div>
     <div id="envelope">
       <div id="back">
@@ -79,11 +79,19 @@
       </div>
 
       <div id="letter">
-        <h1>For My lovely<span> Zhanna</span></h1>
+        <h1>For My <span>Good Friend</span></h1>
 
         <!-- <img src="https://i.postimg.cc/5yZQnDpb/ukraine-7424066-640.webp" />-->
         <p>
-          Жанна, ты очень хороший человек. Я ценю тебя и нашу дружбу. Наша лучезарная, яркая соседка с очень добрым сердцем. Мы любим тебя ❤️
+          I know you're probably knee-deep in textbooks and feeling like your brain's going to explode 😅, 
+          but I just wanted to remind you that you're doing AMAZING!
+          Because you’re not just learning from your books, but from all the beautiful experiences around you. 
+          Remember, even when things feel tough, you're one step closer to your dreams. <br />
+          And hey, don’t forget to take help from me whenever you get stuck in anything, whether it’s a study question, or just needing to chat. 
+          I'm always here for you, no matter the distance!. And don’t forget healthy food and a goofy dance in your room can work wonders! 💃          
+          <br />
+          <br />
+          You've got this, rockstar! 🎸 Keep shining bright. ✨
           <br />
           <br />
           I hope this made your day. <br />
