--- a/index.html
+++ b/index.html
@@ -88,10 +88,7 @@
           Because you’re not just learning from your books, but from all the beautiful experiences around you. 
           Remember, even when things feel tough, you're one step closer to your dreams. <br />
           And hey, don’t forget to take help from me whenever you get stuck in anything, whether it’s a study question, or just needing to chat. 
-          I'm always here for you, no matter the distance!. And don’t forget healthy food and a goofy dance in your room can work wonders! 💃          
-          <br />
-          <br />
-          You've got this, rockstar! 🎸 Keep shining bright. ✨
+          I'm always here for you, no matter the distance!. And don’t forget healthy food and a goofy dance in your room xD 💃          
           <br />
           <br />
           I hope this made your day. <br />
